STDG-108 fixed losing connected nodes during json readout
