# back/docs/swagger.json
@@ -7,7 +7,7 @@
     "paths": {
         "/map": {
             "get": {
-                "description": "Gets all map items of available rooms and connector spaces (corridor, stairs, etc..)",
+                "description": "Gets map items of available rooms and connector spaces (corridor, stairs, etc..) with optional filter parameters",
                 "consumes": [
                     "application/json"
                 ],
@@ -18,6 +18,38 @@
                     "MapController"
                 ],
                 "summary": "Get All Map Items",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name of the map items",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "floor of the map items",
+                        "name": "floor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "potential alias of the room",
+                        "name": "alias",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "map item is linked to a certain campus",
+                        "name": "campus",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "map item is linked to a building",
+                        "name": "building",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -31,9 +63,9 @@
                 }
             }
         },
-        "/map/floor": {
+        "/map/floor/{floor}": {
             "get": {
-                "description": "Gets all map items of available rooms and connector spaces (corridor, stairs, etc..)",
+                "description": "Gets all map items of available rooms and connector spaces (corridor, stairs, etc..) of a certain floor",
                 "consumes": [
                     "application/json"
                 ],
@@ -43,13 +75,15 @@
                 "tags": [
                     "MapController"
                 ],
-                "summary": "Get All Map Items",
+                "summary": "Get All Map Items from a certain floor",
+                "operationId": "get-room-list-floor",
                 "parameters": [
                     {
                         "type": "integer",
                         "description": "filter map items by floor",
                         "name": "floor",
-                        "in": "query"
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -119,6 +153,32 @@
                 ],
                 "summary": "Get Room List",
                 "operationId": "get-room-list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "room name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "floor of the room",
+                        "name": "floor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "potential alias of the room",
+                        "name": "alias",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "rooms that contain the query string in name, alias or description",
+                        "name": "room",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -127,6 +187,75 @@
                             "items": {
                                 "$ref": "#/definitions/models.Room"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/roomlist/floor/{floor}": {
+            "get": {
+                "description": "Gets all available rooms for a certain floor",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RoomController"
+                ],
+                "summary": "Get Room List From Floor",
+                "operationId": "get-room-list-floor",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "filter rooms by floor",
+                        "name": "floor",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Room"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/roomlist/room/{name}": {
+            "get": {
+                "description": "Gets a specify room by its unique name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RoomController"
+                ],
+                "summary": "Get Room by Name",
+                "operationId": "get-room",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "get room by name",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Room"
                         }
                     }
                 }
@@ -153,11 +282,11 @@
         "models.MapItem": {
             "type": "object",
             "properties": {
-                "alias": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                "building": {
+                    "type": "string"
+                },
+                "campus": {
+                    "type": "string"
                 },
                 "color": {
                     "type": "string"
@@ -179,22 +308,59 @@
                     "items": {
                         "$ref": "#/definitions/models.Section"
                     }
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
         "models.Room": {
             "type": "object",
             "properties": {
+                "building": {
+                    "type": "string"
+                },
+                "campus": {
+                    "type": "string"
+                },
+                "color": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "doors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Door"
+                    }
+                },
                 "id": {
                     "type": "integer"
                 },
-                "mapItem": {
-                    "type": "object",
-                    "$ref": "#/definitions/models.MapItem"
+                "name": {
+                    "type": "string"
                 },
-                "pathNode": {
-                    "type": "object",
-                    "$ref": "#/definitions/navigation.PathNode"
+                "pathNodes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/navigation.PathNode"
+                    }
+                },
+                "sections": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Section"
+                    }
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
